--- a/contact.html
+++ b/contact.html
@@ -226,7 +226,7 @@
         <div class="row">
           <div class="col-lg-7 mx-auto text-center">
             <h2 class="text-white mb-4"></h2>
-            <p class="mb-0"><a href="https://untree.co/" rel="noopener" class="btn btn-primary"></a></p>
+            <p class="mb-0"><a href="https://untree.co/" rel="noopener" class="btn btn-primary">Get it for free!</a></p>
           </div>
         </div>
       </div>
@@ -309,7 +309,7 @@
     <div id="overlayer"></div>
     <div class="loader">
       <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
-      <dotlottie-player src="https://lottie.host/23c700bd-721b-4057-8291-bbbd02ef0010/PCMWp6Ntqc.json" background="transparent" speed="1" style="width: 300px; height: 300px;"  autoplay></dotlottie-player>
+      <dotlottie-player src="https://lottie.host/23c700bd-721b-4057-8291-bbbd02ef0010/PCMWp6Ntqc.json" background="transparent" speed="2" style="width: 300px; height: 300px;"  autoplay></dotlottie-player>
       <div style="display: flex; justify-content: center;">
         <span>Loading...</span>
       </div>
