--- a/about.html
+++ b/about.html
@@ -31,7 +31,13 @@
   <title>Silex composite</title>
 </head>
 <body>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
+<a href="https://wa.me/52200000?text=J'espère que vous allez bien. Je suis très intéressé par vos produits et j'aimerais en savoir plus à leur sujet. Pourriez-vous me donner des informations sur votre gamme et vos services ?
+
+Merci d'avance !" target=”_blank” class="whatsapp-btn">
+  <i class="bi bi-whatsapp"></i>
+</a>
     <div class="site-mobile-menu site-navbar-target">
       <div class="site-mobile-menu-header">
         <div class="site-mobile-menu-close">
@@ -161,70 +167,70 @@
         <article class="stop">
           <div class="text">
             <header>
-              <h2>Magnetic drum</h2>
-              <time>1932</time> - Gustav Taushek
+              <h2>Fabrication de tables en marbre</h2>
+              <time>1996</time>
             </header>
-            <p>A rotating cylinder coated with a magnetic material, used for storing data.</p>
+            <p>Début de l'activité avec la fabrication de tables en marbre, mettant en valeur notre expertise artisanale.</p>
             <img src="images/table.png" alt="" />
           </div>
         </article>
         <article class="stop">
           <div class="text">
             <header>
-              <h2>Magnetic tape</h2>
-              <time>1951</time> - Fritz Pfleumer
+              <h2> Première unité de production spécialisée dans les baignoires</h2>
+              <time>1999</time>
             </header>
-            <p>A long strip of plastic coated with a magnetic material, used for storing data.</p>
+            <p>Nous avons lancé notre première unité de production dédiée aux baignoires , marquant une étape clé dans notre expansion.</p>
             <img src="images/bathub.png" alt="" />
           </div>
         </article>
         <article class="stop">
           <div class="text">
             <header>
-              <h2>Zip drive</h2>
-              <time>1980</time> - Iomega
+              <h2>Expansion et développement à l'international</h2>
+              <time>2003</time>
             </header>
-            <p>A removable disk drive with a capacity of up to 100 MB.</p>
+            <p>Forts de notre succès initial, nous avons étendu nos activités à l'échelle internationale, en exportant nos produits vers de nouveaux marchés.</p>
             <img src="images/factory.png" alt="" />
           </div>
         </article>
         <article class="stop">
           <div class="text">
             <header>
-              <h2>Hard disk drive</h2>
-              <time>1956</time> - IBM
+              <h2>Ouverture de notre première usine et mise en place de notre chaîne de fabrication</h2>
+              <time>2005</time>
             </header>
-            <p>A stack of rotating platters coated with a magnetic material.</p>
+            <p>Pour répondre à la demande croissante, nous avons ouvert notre première usine et établi notre propre chaîne de fabrication.</p>
             <img src="images/ship.png" alt="" />
           </div>
         </article>
         <article class="stop">
           <div class="text">
             <header>
-              <h2>Floppy disk</h2>
-              <time>1967</time> - Alan Shugart
+              <h2>Ajout des vasques à notre gamme de produits</h2>
+              <time>2009</time>
             </header>
-            <p>A small, flexible disk coated with a magnetic material, used for storing data.</p>
+            <p>Nous avons diversifié notre gamme en introduisant des vasques, offrant ainsi des solutions complètes pour les espaces de salle de bains.</p>
             <img src="images/baathroom.png" alt="" />
           </div>
         </article>
         <article class="stop">
           <div class="text">
             <header>
-              <h2>Compact cassette</h2>
-              <time>1971</time> - Philips
+              <h2>Expansion vers les équipements complets de salle de bain</h2>
+              <time>2015</time>
             </header>
-            <p>A small, magnetic tape cassette used for storing data.</p>
+            <p>Nous avons étendu nos offres avec des douches à l'italienne, combinant esthétique et fonctionnalité dans nos produits.</p>
             <img src="images/bathroom.png" alt="" />
           </div>
         </article>
         <article class="stop">
           <div class="text">
             <header>
-              <h2>Zip drive</h2>
-              <time>1980</time> - Iomega
+              <h2>Diversification vers les éviers de cuisine</h2>
+              <time>2017</time>
             </header>
-            <p>A removable disk drive with a capacity of up to 100 MB.</p>
+            <p>Aujourd'hui, nous développons des éviers de cuisine en marbre pour répondre aux besoins de nos clients en matière d'aménagement intérieur.</p>
             <img src="images/sink.png" alt="" />
           </div>
         </article>
