--- a/index.html
+++ b/index.html
@@ -125,6 +125,13 @@
 
 
     </div>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
+    <a href="https://wa.me/52200000?text=J'espère que vous allez bien. Je suis très intéressé par vos produits et j'aimerais en savoir plus à leur sujet. Pourriez-vous me donner des informations sur votre gamme et vos services ?
+
+Merci d'avance !" target=”_blank” class="whatsapp-btn">
+        <i class="bi bi-whatsapp"></i>
+    </a>
 
 
      <div class="site-section">
