--- a/contact.html
+++ b/contact.html
@@ -5,15 +5,15 @@
 * License: https://creativecommons.org/licenses/by/3.0/
 */ -->
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Bouharb">
   <link rel="shortcut icon" href="images/favicon.png">
 
-  <meta name="description" content="Trouvez des éviers, baignoires et vasques en quartz et marbre moderne chez nous. Améliorez le style de votre salle de bain avec nos produits de qualité supérieure. Découvrez nos options de personnalisation et bénéficiez d'une expédition rapide." />
-  <meta name="keywords" content="éviers haut de gamme vasques de luxe baignoires élégantes produits de salle de bain modernes designs de salle de bain contemporains matériaux de qualité pour salle de bain" />
+  <meta name="description" content="Trouvez des éviers, baignoires et vasques en quartz et marbre moderne chez nous. Améliorez le style de votre salle de bain avec nos produits de qualité supérieure." />
+  <meta name="keywords" content="éviers haut de gamme vasques de luxe baignoires élégantes produits de salle de bain modernes " />
   <meta name="robots" content="index, follow">
 
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
